--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 h1, h2 {
-    color: blue;
+    color: rgb(62, 7, 99);
     padding-top: 30px;
     padding-bottom: 10px;
     font-weight: bold;
@@ -14,7 +14,7 @@ h1, h2 {
 }
 
 body {
-    background: lemonchiffon;
+    background: rgb(228, 214, 238);
 }
 
 .row {
@@ -22,6 +22,15 @@ body {
     margin-left:-90px;
  }
 
- th {
-     width: 200%;
+.btn {
+     background-color: rgb(252, 239, 63);
+     border: 2px solid rgb(62, 7, 99);
+     color: black;
+     font-weight: bold; 
  }
+ 
+
+.btn:hover {
+    background-color: rgb(252, 176, 63);
+    border: 2px solid rgb(62, 7, 99);
+}
